@@ -106,6 +106,8 @@ struct assoc_mgr_association_usage {
 				  * (DON'T PACK) */
 	double grp_used_wall;   /* group count of time used in
 				 * running jobs (DON'T PACK) */
+	uint64_t grp_used_cpu_run_secs; /* count of running cpu secs
+					 * (DON'T PACK) */
 
 	uint32_t level_shares;  /* number of shares on this level of
 				 * the tree (DON'T PACK) */
@@ -120,8 +122,6 @@ struct assoc_mgr_association_usage {
 	long double usage_norm;	/* normalized usage (DON'T PACK) */
 	long double usage_raw;	/* measure of resource usage (DON'T PACK) */
 
-	uint64_t used_cpu_run_secs; /* count of running cpu secs
-				     * (DON'T PACK) */
 	uint32_t used_jobs;	/* count of active jobs (DON'T PACK) */
 	uint32_t used_submit_jobs; /* count of jobs pending or running
 				    * (DON'T PACK) */
