@@ -89,6 +89,21 @@ static void _cancel_job(struct job_record *job_ptr)
 	delete_job_details(job_ptr);
 }
 
+static uint64_t _get_unused_cpu_run_secs(struct job_record *job_ptr)
+{
+	uint64_t unused_cpu_run_secs = 0;
+	uint64_t time_limit_secs = (uint64_t)job_ptr->time_limit * 60;
+
+	/* No unused cpu_run_secs if job ran past its time limit */
+	if (job_ptr->end_time >= job_ptr->start_time + time_limit_secs) {
+		return 0;
+	}
+
+	unused_cpu_run_secs = job_ptr->total_cpus *
+		(job_ptr->start_time + time_limit_secs - job_ptr->end_time);
+	return unused_cpu_run_secs;
+}
+
 static bool _valid_job_assoc(struct job_record *job_ptr)
 {
 	slurmdb_association_rec_t assoc_rec, *assoc_ptr;
@@ -125,10 +140,18 @@ static void _adjust_limit_usage(int type, struct job_record *job_ptr)
 	slurmdb_association_rec_t *assoc_ptr = NULL;
 	assoc_mgr_lock_t locks = { WRITE_LOCK, NO_LOCK,
 				   WRITE_LOCK, NO_LOCK, NO_LOCK };
+	uint64_t unused_cpu_run_secs = 0;
+	uint64_t used_cpu_run_secs = 0;
 
 	if (!(accounting_enforce & ACCOUNTING_ENFORCE_LIMITS)
 	    || !_valid_job_assoc(job_ptr))
 		return;
+
+	if (type == ACCT_POLICY_JOB_FINI)
+		unused_cpu_run_secs = _get_unused_cpu_run_secs(job_ptr);
+	else if (type == ACCT_POLICY_JOB_BEGIN)
+		used_cpu_run_secs = (uint64_t)job_ptr->total_cpus
+			* (uint64_t)job_ptr->time_limit * 60;
 
 	assoc_mgr_lock(&locks);
 	if (job_ptr->qos_ptr && (accounting_enforce & ACCOUNTING_ENFORCE_QOS)) {
@@ -173,6 +196,8 @@ static void _adjust_limit_usage(int type, struct job_record *job_ptr)
 			qos_ptr->usage->grp_used_jobs++;
 			qos_ptr->usage->grp_used_cpus += job_ptr->total_cpus;
 			qos_ptr->usage->grp_used_nodes += job_ptr->node_cnt;
+			qos_ptr->usage->grp_used_cpu_run_secs +=
+				used_cpu_run_secs;
 			used_limits->jobs++;
 			used_limits->cpus += job_ptr->total_cpus;
 			used_limits->nodes += job_ptr->node_cnt;
@@ -199,6 +224,18 @@ static void _adjust_limit_usage(int type, struct job_record *job_ptr)
 				debug2("acct_policy_job_fini: grp_used_nodes "
 				       "underflow for qos %s", qos_ptr->name);
 			}
+
+			/* If the job finished early remove the extra
+			   time now. */
+			if (unused_cpu_run_secs >
+			    qos_ptr->usage->grp_used_cpu_run_secs) {
+				qos_ptr->usage->grp_used_cpu_run_secs = 0;
+				info("acct_policy_job_fini: "
+				       "grp_used_cpu_run_secs "
+				       "underflow for qos %s", qos_ptr->name);
+			} else
+				qos_ptr->usage->grp_used_cpu_run_secs -=
+					unused_cpu_run_secs;
 
 			used_limits->cpus -= job_ptr->total_cpus;
 			if ((int32_t)used_limits->cpus < 0) {
@@ -252,6 +289,12 @@ static void _adjust_limit_usage(int type, struct job_record *job_ptr)
 			assoc_ptr->usage->used_jobs++;
 			assoc_ptr->usage->grp_used_cpus += job_ptr->total_cpus;
 			assoc_ptr->usage->grp_used_nodes += job_ptr->node_cnt;
+			assoc_ptr->usage->grp_used_cpu_run_secs +=
+				used_cpu_run_secs;
+			debug4("acct_policy_job_begin: after adding job %i, "
+			       "assoc %s grp_used_cpu_run_secs is %"PRIu64"",
+			       job_ptr->job_id, assoc_ptr->acct,
+			       assoc_ptr->usage->grp_used_cpu_run_secs);
 			break;
 		case ACCT_POLICY_JOB_FINI:
 			if (assoc_ptr->usage->used_jobs)
@@ -276,6 +319,28 @@ static void _adjust_limit_usage(int type, struct job_record *job_ptr)
 				       "underflow for account %s",
 				       assoc_ptr->acct);
 			}
+
+			/* If the job finished early remove the extra
+			   time now. */
+			if (unused_cpu_run_secs >
+			    assoc_ptr->usage->grp_used_cpu_run_secs) {
+				assoc_ptr->usage->grp_used_cpu_run_secs = 0;
+				debug2("acct_policy_job_fini: "
+				       "grp_used_cpu_run_secs "
+				       "underflow for account %s",
+				       assoc_ptr->acct);
+			} else {
+				assoc_ptr->usage->grp_used_cpu_run_secs -=
+					unused_cpu_run_secs;
+				debug4("acct_policy_job_fini: job %u. "
+				       "Removed %"PRIu64" unused seconds "
+				       "from assoc %s "
+				       "grp_used_cpu_run_secs = %"PRIu64"",
+				       job_ptr->job_id, unused_cpu_run_secs,
+				       assoc_ptr->acct,
+				       assoc_ptr->usage->grp_used_cpu_run_secs);
+			}
+
 			break;
 		default:
 			error("acct_policy: association unknown type %d", type);
@@ -860,6 +925,7 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 	uint32_t time_limit;
 	uint64_t cpu_time_limit;
 	uint64_t job_cpu_time_limit;
+	uint64_t cpu_run_mins;
 	bool rc = true;
 	uint64_t usage_mins;
 	uint32_t wall_mins;
@@ -884,14 +950,13 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 		return true;
 
 	/* clear old state reason */
-        if ((job_ptr->state_reason == WAIT_ASSOC_JOB_LIMIT) ||
+	if ((job_ptr->state_reason == WAIT_ASSOC_JOB_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_ASSOC_RESOURCE_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_ASSOC_TIME_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_JOB_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_RESOURCE_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_TIME_LIMIT))
-                job_ptr->state_reason = WAIT_NO_REASON;
-
+		job_ptr->state_reason = WAIT_NO_REASON;
 
 	job_cpu_time_limit = (uint64_t)job_ptr->time_limit
 		* (uint64_t)job_ptr->details->min_cpus;
@@ -902,6 +967,7 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 		slurmdb_used_limits_t *used_limits = NULL;
 		usage_mins = (uint64_t)(qos_ptr->usage->usage_raw / 60.0);
 		wall_mins = qos_ptr->usage->grp_used_wall / 60;
+		cpu_run_mins = qos_ptr->usage->grp_used_cpu_run_secs / 60;
 
 		/*
 		 * If the QOS has a GrpCPU limit set and the current usage
@@ -977,6 +1043,28 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 
 			rc = false;
 			goto end_it;
+		}
+
+		if (qos_ptr->grp_cpu_run_mins != INFINITE) {
+			if (cpu_run_mins + job_cpu_time_limit >
+			    qos_ptr->grp_cpu_run_mins) {
+				job_ptr->state_reason =
+					WAIT_ASSOC_RESOURCE_LIMIT;
+				xfree(job_ptr->state_desc);
+				debug2("job %u being held, "
+				       "qos %s is at or exceeds "
+				       "group max running cpu minutes "
+				       "limit %"PRIu64" with already "
+				       "used %"PRIu64" + requested %"PRIu64" "
+				       "for qos '%s'",
+				       job_ptr->job_id, qos_ptr->name,
+				       qos_ptr->grp_cpu_run_mins,
+				       cpu_run_mins,
+				       job_cpu_time_limit,
+				       qos_ptr->name);
+				rc = false;
+				goto end_it;
+			}
 		}
 
 		if ((job_ptr->limit_set_min_nodes != ADMIN_SET_LIMIT)
@@ -1213,6 +1301,8 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 	while(assoc_ptr) {
 		usage_mins = (uint64_t)(assoc_ptr->usage->usage_raw / 60.0);
 		wall_mins = assoc_ptr->usage->grp_used_wall / 60;
+		cpu_run_mins = assoc_ptr->usage->grp_used_cpu_run_secs / 60;
+
 #if _DEBUG
 		info("acct_job_limits: %u of %u",
 		     assoc_ptr->usage->used_jobs, assoc_ptr->max_jobs);
@@ -1289,6 +1379,30 @@ extern bool acct_policy_job_runnable(struct job_record *job_ptr)
 
 			rc = false;
 			goto end_it;
+		}
+
+		if ((!qos_ptr ||
+		     (qos_ptr && qos_ptr->grp_cpu_run_mins == INFINITE))
+		    && (assoc_ptr->grp_cpu_run_mins != INFINITE)) {
+			if (cpu_run_mins + job_cpu_time_limit >
+			    assoc_ptr->grp_cpu_run_mins) {
+				job_ptr->state_reason =
+					WAIT_ASSOC_RESOURCE_LIMIT;
+				xfree(job_ptr->state_desc);
+				debug2("job %u being held, "
+				       "assoc %u is at or exceeds "
+				       "group max running cpu minutes "
+				       "limit %"PRIu64" with already "
+				       "used %"PRIu64" + requested %"PRIu64" "
+				       "for account %s",
+				       job_ptr->job_id, assoc_ptr->id,
+				       assoc_ptr->grp_cpu_run_mins,
+				       cpu_run_mins,
+				       job_cpu_time_limit,
+				       assoc_ptr->acct);
+				rc = false;
+				goto end_it;
+			}
 		}
 
 		if ((job_ptr->limit_set_min_nodes != ADMIN_SET_LIMIT)
@@ -1613,13 +1727,13 @@ extern bool acct_policy_node_usable(struct job_record *job_ptr,
 		return true;
 
 	/* clear old state reason */
-        if ((job_ptr->state_reason == WAIT_ASSOC_JOB_LIMIT) ||
+	if ((job_ptr->state_reason == WAIT_ASSOC_JOB_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_ASSOC_RESOURCE_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_ASSOC_TIME_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_JOB_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_RESOURCE_LIMIT) ||
 	    (job_ptr->state_reason == WAIT_QOS_TIME_LIMIT))
-                job_ptr->state_reason = WAIT_NO_REASON;
+		job_ptr->state_reason = WAIT_NO_REASON;
 
 
 	assoc_mgr_lock(&locks);
